--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,17 @@
 :root {
   --header-color: #2e2f42;
   --footer-background: #2e2f42;
+  --body-background: #ffffff;
+  --logo-color: #4d5ae5;
+  --header-span-logo-color: #2e2f42;
+  --footer-logo-color: #4d5ae5;
+  --background-btn-portfolio: #f4f4fd;
 }
 
 body {
   font-family: "Roboto", sans-serif;
   color: #434455;
+  background-color: var(--body-background);
 }
 
 .link {
@@ -27,29 +33,25 @@ body {
 .header-menu {
 }
 .header-logo {
-  font-family: "Raleway";
+  font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
-  display: flex;
-  align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #2e2f42;
+  color: var(--logo-color);
   cursor: pointer;
 }
-.logo span {
-  font-family: "Raleway";
+.header-logo-span {
+  font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
-  display: flex;
-  align-items: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #4d5ae5;
+  color: var(--header-span-logo-color);
 }
 .header-menu-list {
 }
@@ -62,7 +64,16 @@ body {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
+.header-menu-link:hover,
+.header-menu-link:focus {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #404bbf;
+}
 .contacts {
+  font-style: normal;
 }
 .contacts-list {
 }
@@ -75,6 +86,14 @@ body {
   letter-spacing: 0.02em;
   color: #434455;
 }
+.contacts-link:hover,
+.contacts-link:focus {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #404bbf;
+}
 
 /*!-------------------HERO--------------------*/
 
@@ -85,7 +104,6 @@ body {
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
-  text-align: center;
   letter-spacing: 0.02em;
   color: #ffffff;
 }
@@ -95,8 +113,6 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  display: flex;
-  align-items: center;
   letter-spacing: 0.04em;
   color: #ffffff;
   background: #4d5ae5;
@@ -108,14 +124,10 @@ body {
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.5;
-  display: flex;
   align-items: center;
   letter-spacing: 0.04em;
   color: #ffffff;
   background: #404bbf;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
 }
 
 /*!-------------------BENEFITS--------------------*/
@@ -148,7 +160,6 @@ body {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
-  text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: --var(--header-color);
@@ -165,12 +176,12 @@ body {
 /*!-------------------TEAM--------------------*/
 
 .team {
+  background: #f4f4fd;
 }
 .team-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
-  text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--header-color);
@@ -178,6 +189,7 @@ body {
 .team-list {
 }
 .team-item {
+  background-color: #ffffff;
 }
 .team-img {
   width: 264px;
@@ -187,14 +199,12 @@ body {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
-  text-align: center;
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
 .team-text {
   font-size: 16px;
   line-height: 1.5;
-  text-align: center;
   letter-spacing: 0.02em;
 }
 
@@ -211,13 +221,20 @@ body {
 }
 
 .footer-logo {
-  font-family: "Raleway";
+  font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
-  display: flex;
-  align-items: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--footer-logo-color);
+}
+
+.footer-logo-span {
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #f4f4fd;
@@ -240,14 +257,12 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  display: flex;
-  align-items: center;
   text-align: center;
   letter-spacing: 0.04em;
   color: #4d5ae5;
   cursor: pointer;
   border: 1px solid #e7e9fc;
-  border-radius: 4px;
+  background-color: var(--background-btn-portfolio);
 }
 
 .portfolio-menu-item .portfolio-menu-btn:hover,
@@ -257,15 +272,10 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  display: flex;
-  align-items: center;
   text-align: center;
   letter-spacing: 0.04em;
   color: #ffffff;
   background: #404bbf;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
 }
 
 /*!--------------------PORTFOLIO-PRODUCTS--------------*/
